# sae-eai

./: .gitignore  CLAUDE.md  LICENSE  Makefile  chat.py  embed.py  embed_layer.py  features.py  featurized.py  flowcharts.md  flowcharts.txt  hf_milvus_demo.db  main.py  mkdb.py  pyproject.toml  qwen2hook.py  rag.py  ragdb.py  test_sae_interpretability.py  test_sae_simple.py
neuron_explainer/activations/: sae_activation_records.py  sae_activations.py
neuron_explainer/explanations/: sae_explainer.py
