[project]
name = "sae-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blobfile>=3.0.0",
    "boostedblob>=0.15.6",
    "eai-sparsify",
    "hf-xet>=1.1.5",
    "httpx>=0.28.1",
    "langchain-text-splitters>=0.3.9",
    "numpy>=2.3.2",
    "orjson>=3.11.1",
    "pandas>=2.3.1",
    "pymilvus>=2.5.14",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.11.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
eai-sparsify = { git = "https://github.com/EleutherAI/sparsify" }

[tool.uv.workspace]
members = ["sae-chat"]
